// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should be invalid for bad category 1`] = `
Object {
  "category": "Expected a value of type \`\\"kayaking\\" | \\"hazards\\" | \\"supply\\" | \\"misc\\"\` for \`category\` but received \`\\"foo\\"\`.",
}
`;

exports[`should be invalid for bad id 1 1`] = `
Object {
  "id": "Value must be valid slug",
}
`;

exports[`should be invalid for bad id 2 1`] = `
Object {
  "id": "Value must be valid slug",
}
`;

exports[`should be invalid for bad id 3 1`] = `
Object {
  "id": "Value must be valid slug",
}
`;

exports[`should be invalid for empty name 1`] = `
Object {
  "name": "Value must be non-empty string",
}
`;
